# musicprod

./: .gitignore  README.md  musicprod-hub.spec  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  build-exe.yml
musicprod/: __init__.py  cli.py  hub.py
musicprod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
musicprod/tools/: __init__.py  audio_compressor.py  audio_merger.py  audio_normalizer.py  audio_splitter.py  audio_trimmer.py  bpm_detector.py  channel_converter.py  chord_detector.py  fade_effect.py  format_converter.py  key_detector.py  loop_creator.py  metadata_editor.py  noise_reducer.py  pitch_shifter.py  reverb_effect.py  silence_remover.py  tempo_changer.py  updater.py  vocal_autotune.py  volume_adjuster.py  waveform_plotter.py  youtube_to_mp3.py
tests/: test_audio_merger.py  test_audio_normalizer.py  test_audio_splitter.py  test_audio_trimmer.py  test_bpm_detector.py  test_chord_detector.py  test_fade_effect.py  test_format_converter.py  test_metadata_editor.py  test_noise_reducer.py  test_pitch_shifter.py  test_updater.py  test_vocal_autotune.py  test_waveform_plotter.py  test_youtube_to_mp3.py
