[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicprod"
version = "0.1.0"
description = "Music production CLI tools — YouTube to MP3, BPM detection, format conversion, audio trimming and metadata editing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2026.2.21",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
musicprod = "musicprod.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
